# AegisML

./: .gitignore  pyproject.toml
src/aegisml/: __init__.py  dynamic_tests.py  infrastructure_tests.py  interactive.py  mcp_server.py  sandbox_cli.py
src/aegisml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
